<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="14dp"
    tools:context=".view.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_upload_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/result" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:text="@string/analysis_result"
                android:textSize="24sp"
                android:textStyle="bold" />


        </LinearLayout>


        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/category"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/precentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/presentase"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/explanation_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/penjelasan_t"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="@string/cancer"
            android:textSize="14sp"
            android:textStyle="normal" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:id="@+id/btn_news"
            android:layout_height="wrap_content"
            style="@style/BtnSecondary"
            android:layout_marginTop="16dp"
            android:text="@string/lihat_berita"/>


    </LinearLayout>
</ScrollView>